--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
         <title>Document</title>
     </head>
     <body>
-        <a href="#">link</a>
+        <a href="./html/AC_add_00.htm">link</a>
     </body>
 </html>
